test/ui/tests/fail/class-invalid-item-type.rs
struct Example;

#[neon::class]
impl Example {
    type AssocType = i32;
}

fn main() {}
